# Luma-Language

./: .replit  README.md  setup_luma_structure.py  setup_rust.sh  test.csv
.github/: FUNDING.yml
Luma/: Cargo.toml  LICENSE  Makefile  README.md  build.sh  data.csv  test_export.onnx
Luma/data/: example.csv  test.csv
Luma/examples/: data_loading_example.rs  repl_data_commands.txt
Luma/include/: luma.h
Luma/include/bindings/: c.rs  javascript.rs  python.rs
Luma/include/bindings/c/: luma.h
Luma/include/bindings/javascript/: luma.js
Luma/include/bindings/python/: luma.py
Luma/plugins/: community.rs  image_processing.rs  mod.rs  multi_modal.rs  nlp.rs  registry.rs
Luma/plugins/community/: custom_nlp_module.rs  image_processing.rs  mod.rs  multi_modal_support.rs
Luma/samples/: config.json  iris.csv
Luma/src/: lib.rs  main.rs  mod.rs
Luma/src/ai/: mod.rs
Luma/src/ai/data/: augmentations.rs  loaders.rs  mod.rs  multi_modal.rs  preprocessors.rs
Luma/src/ai/deployment/: deployers.rs  exporters.rs  mod.rs  optimizers.rs
Luma/src/ai/engine/: accelerators.rs  autodiff.rs  mod.rs  operations.rs  tensor.rs
Luma/src/ai/evaluation/: comparison.rs  evaluators.rs  metrics.rs  mod.rs
Luma/src/ai/models/: advanced.rs  architectures.rs  layers.rs  mod.rs  model.rs  optimizers.rs
Luma/src/ai/training/: callbacks.rs  distributed.rs  mod.rs  schedulers.rs  trainers.rs
Luma/src/compiler/backend/: wasm.rs
Luma/src/core/: mod.rs
Luma/src/core/compiler/: codegen.rs  ir.rs  mod.rs
Luma/src/core/compiler/backend/: colab.rs  mod.rs  native.rs  wasm.rs
Luma/src/core/interpreter/: evaluator.rs  mod.rs  pipeline_executor.rs  runtime.rs
Luma/src/core/parser/: ast.rs  lexer.rs  parser.rs
Luma/src/core/stdlib/: base.rs  io.rs  math.rs  mod.rs  utils.rs
Luma/src/integrations/: huggingface.rs  mod.rs  pytorch.rs  tensorflow.rs  web.rs
Luma/src/repl/: mod.rs  mod.rs.bak
Luma/src/utilities/: debugging.rs  logging.rs  mod.rs  profiling.rs  visualization.rs
Luma/tests/ai_tests/: data_tests.rs  deployment_tests.rs  model_tests.rs  training_tests.rs
Luma/tests/core_tests/: compiler_tests.rs  interpreter_tests.rs  parser_tests.rs
Luma/tests/export_tests/: colab_tests.rs  native_tests.rs  wasm_tests.rs
Luma/tests/integration_tests/: pytorch_tests.rs  tensorflow_tests.rs  web_tests.rs
attached_assets/: Pasted--4-1-loaders-rs-augmentations-rs--1747138934759.txt  Pasted--4-1-loaders-rs-augmentations-rs--1747231041527.txt  Pasted--Agent-AI-gradients-propaga-1746663697007.txt  Pasted--Luma-custom-machine-learning-framew-1746663683553.txt  Pasted-227-Debug-Add-operation-for-neuron-1-sum-with-bias-tensor-ID-1227-Debug-Input-tensor-for-op-rel-1746665066754.txt  Pasted-Debug-Input-tensor-for-op-matmul-already-registered-with-ID-19-Debug-Output-tensor-for-op-matmul--1746662140556.txt  Pasted-Luma-build-Build-artifacts-and-compiled-binaries-variou-1746444030752.txt  Pasted-Luma-src-ai-data-mod-rs-augmentatio-1746443455856.txt  Pasted-Luma-src-core-parser-lexer-rs-parse-1746387924841.txt  Pasted-warning-unused-imports-DynamicImage-ImageBuffer-Rgba-src-plugins-image-processing-1747231933172.txt
