[package]
name = "luma"
version = "0.1.0"
edition = "2021"

[dependencies]
rayon = "1.10"
rand = "0.8"
lazy_static = "1.5"
syn = "2.0"
csv = "1.3.1"
prettytable = "0.10"
image = "0.24"
hound = "3.5"
serde = { version = "1.0", features = ["derive"] }

[lib]
name = "luma"
path = "src/lib.rs"

[[bin]]
name = "luma"
path = "src/main.rs"