[package]
name = "luma"
version = "0.1.0"
edition = "2021"
description = "A cutting-edge machine learning framework with enhanced gradient propagation"
authors = ["Luma Team"]
license = "MIT"

[dependencies]
# Core dependencies
rayon = "1.10"             # Parallel computing
rand = "0.8"               # Random number generation
rand_distr = "0.4"         # Additional random distributions
lazy_static = "1.5"        # Lazy static initialization
syn = "2.0"                # Syntax parsing for macros

# Data handling
csv = "1.3.1"              # CSV file parsing
serde = { version = "1.0", features = ["derive"] }  # Serialization/deserialization
serde_json = "1.0"         # JSON parsing
prettytable = "0.10"       # ASCII tables for data display
chrono = "0.4"             # Date and time handling

# Multi-modal data support
image = "0.23"             # Image processing (version compatible with rustc 1.77)
hound = "3.5"              # Audio processing (WAV files)
ndarray = "0.15"           # N-dimensional arrays

# CLI and REPL
rustyline = "9.1.0"        # Interactive command line (version compatible with rustc 1.77)
clap = { version = "4.1", features = ["derive"] }  # Command line arguments

# Optional features
reqwest = { version = "0.11", features = ["json"], optional = true }  # HTTP client
tokio = { version = "1.34", features = ["full"], optional = true }    # Async runtime

[features]
default = []
network = ["reqwest", "tokio"]  # Enable network features

[lib]
name = "luma"
path = "src/lib.rs"

[[bin]]
name = "luma"
path = "src/main.rs"

[profile.release]
lto = true           # Link-time optimization
codegen-units = 1    # Optimize for size
opt-level = 3        # Maximum optimization
debug = false        # No debug symbols
panic = "abort"      # Less code generated for panic handling
